--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /venv/
-/results/
+/results/*
+r2a/r2afdash.py
+.DS_Store
+.idea/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
